[gd_scene load_steps=3 format=3 uid="uid://oul7sm4dr5gc"]

[ext_resource type="Script" uid="uid://c0fpih6loonpy" path="res://scene/item_management/loot/LootPanel.gd" id="1_yo1u1"]
[ext_resource type="Script" uid="uid://djc1gxdiggcrs" path="res://scene/item_management/inventory/InventoryGrid.gd" id="2_3khrp"]

[node name="LootPanel" type="Panel"]
custom_minimum_size = Vector2(100, 100)
script = ExtResource("1_yo1u1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer3" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Loot"

[node name="CloseButton" type="Button" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "X"

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(5, 5)
layout_mode = 2

[node name="InventoryGrid" type="Control" parent="VBoxContainer"]
layout_mode = 2
script = ExtResource("2_3khrp")
metadata/_custom_type_script = "uid://djc1gxdiggcrs"
